--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -10,17 +10,6 @@
     flex-direction: column;
 }
 
-
-/* .title {
-	background-color: rgba(0, 0, 0, 0.729);
-    padding: 10px 20px;
-  border-radius: 20px;
-font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 100px;
-	margin-top: 50px;
-} */
-
 @keyframes gradient {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
@@ -58,10 +47,10 @@ font-size: 50px;
 
 .spanName {
 border-radius: 20px;
-padding: 20px;
+padding: 10px 20px;
 border: 1px solid rgba(240, 237, 237, 0.1);
     box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
-     background-color: rgba(0, 0, 0, 0.729);
+    background: linear-gradient(90deg, #000000, #202020, #383838, #202020, #000000);
     width: auto;
     height: auto;
     color: #ffffff;
