--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -60,10 +60,7 @@
 }
 .skillList {
   display: flex;
-margin: 30px 0;
-margin-bottom: 80px;
-
-
+margin: 30px 0px;
 }
 .item {
   border: 1px solid rgba(240, 237, 237, 0.1);
@@ -78,6 +75,8 @@ background: linear-gradient(90deg, #000000, #202020, #383838, #202020, #000000);
   box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
 
 }
+
+
 
 .photo {
   width: 250px;
