--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+:host {
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
+
 *,
 *:before,
 *:after {
@@ -16,7 +22,7 @@ html {
 }
 
 body {
-
+ 
   margin: 0;
   padding: 0;
   font-family:'Josefin Sans Variable', sans-serif;
