--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -65,6 +65,7 @@ border: 1px solid rgba(240, 237, 237, 0.1);
     align-items: center;
     gap: 20px;
     margin: 0px auto;
+    width: auto;
 }
 
 @keyframes slideInFromRight {
