--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -76,7 +76,10 @@ background: linear-gradient(90deg, #000000, #202020, #383838, #202020, #000000);
 
 }
 
-
+.icon {
+  width: 50px;
+  height: 50px;
+}
 
 .photo {
   width: 250px;
