--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -25,7 +25,7 @@
 }
 .text {
     text-align: left;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 400;
     margin: 100px 0px;
     color: #ffffff;
@@ -60,20 +60,28 @@
 }
 .skillList {
   display: flex;
+  gap: 50px;
 margin: 30px 0px;
 }
 .item {
   border: 1px solid rgba(240, 237, 237, 0.1);
-  padding: 10px 20px;
+  padding: 20px 30px;
   border-radius: 20px;
 background: linear-gradient(90deg, #000000, #202020, #383838, #202020, #000000);
-  color: #ffffff;
+  color: inherit;
   font-size: 25px;
   font-weight: 600;
   text-align: center;
   display: inline-block;
-  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
+  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
 
+display: flex;
+align-items: center;
+flex-direction: column;
+gap: 10px;
 }
 
 .icon {
