--- a/src/components/Projects/CamperClubPage/CamperClubPage.module.css
+++ b/src/components/Projects/CamperClubPage/CamperClubPage.module.css
@@ -5,19 +5,23 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.729);
   opacity: 0;
   transform: translateY(100px);
   animation: slideInFromLeft 2s ease-in-out forwards;
-    
+    position: relative;
 }
 .titleContainer {
   display: flex;
-  gap: 90px;
-  /* align-items: center; */
-  justify-content: space-between;
+flex-direction: column;
   margin-bottom: 50px;
 }
 
+.container {
+  display: flex;
+  gap: 70px;
+  align-items: center;
+}
 .wrapperRight {
     height: auto;
     padding: 50px 0px;
@@ -25,10 +29,11 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.729);
   opacity: 0;
   transform: translateY(100px);
   animation: slideInFromRight 2s ease-in-out forwards;
-    
+    position: relative;
 }
 
 @keyframes slideInFromRight {
@@ -56,8 +61,8 @@
   background-color: rgba(0, 0, 0, 0.729);
     padding: 10px 20px;
   border-radius: 20px;
-    text-align: start;
-    font-size: 30px;
+    text-align: center;
+    font-size: 35px;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 20px;
@@ -77,7 +82,6 @@
     transition: width 0.3s ease-in-out;
 }
 .descriptionWrapper {
-  background-color: rgba(0, 0, 0, 0.729);
     padding: 10px 20px;
   border-radius: 20px;
 }
@@ -139,40 +143,65 @@ text-decoration-skip-ink: none;
 	}
 }
 
+
+
+.toggleExpand {
+   padding: 16px;
+  display: flex; 
+  color: #ffffff;
+  cursor: pointer;
+    font-size: 18px;
+font-weight: 400;
+position: absolute;
+  bottom: 20px;
+  right: 20px;
+border-radius: 20px;
+border: 1px solid rgba(240, 237, 237, 0.1);
+  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
+}
+
+.toggleExpand:hover, .toggleExpand:focus {
+  text-shadow: #ffffff 0px 0px 10px;
+  animation: left-edge 0.5s linear 1;
+}
   
+
   .descriptionTitle {
-    font-size: 30px;
+    font-size: 25px;
     margin-bottom: 20px;
     text-align: start;
   }
   .featuresList {
   text-align: start;
   display: block;
-  font-size: 23px;
+  font-size: 18px;
   gap: 10px;
   margin-bottom: 20px;
   padding-left: 20px; 
 }
   .description {
     margin-bottom: 35px;
-    font-size: 23px;
+    font-size: 18px;
     text-align: start;
   }
   .toolsList {
     display: flex;
     flex-wrap: wrap;
-    font-size: 23px;
+    font-size: 18px;
     gap: 10px;
     margin-bottom: 20px;
     text-align: start;
   }
   .featuresItem {
-  font-size: 23px;
+  font-size: 18px;
   list-style: disc; 
   list-style-position: inside; 
 }
   .tool {
-    font-size: 23px;
+    font-size: 18px;
     text-align: start;
   }
   .imgWater {
