--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -27,10 +27,9 @@
 font-size: 50px;
     font-weight: 700;
     margin-bottom: 70px;
-	margin-top: 50px;
 }
 
-.item {
+/* .item {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -66,7 +65,7 @@ border: 1px solid rgba(240, 237, 237, 0.1);
     gap: 20px;
     margin: 0px auto;
     width: auto;
-}
+} */
 
 @keyframes slideInFromRight {
             0% {
