--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -87,7 +87,7 @@ margin: 30px 0px;
   border: 1px solid rgba(240, 237, 237, 0.1);
   padding: 20px 30px;
   border-radius: 20px;
-background: linear-gradient(90deg, #000000, #202020, #383838, #202020, #000000);
+background: linear-gradient(90deg, #000000, #202020, #000000);
   color: inherit;
   font-size: 25px;
   font-weight: 600;
