--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -1,183 +1,25 @@
 
 
-.wrapper {
+/* .wrapper {
     align-items: center;
     justify-content: center;
     flex-direction: column;
     display: flex;
-    margin: auto;
    overflow: hidden;
+   margin-top: 100px;
    padding: 0px 50px;
-margin: 100px 0px;
-}
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 100px;
-    margin-bottom: 50px;
-    position: relative;
-}
-.helloDiv {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 30px;
-    margin-bottom: 50px;
-}
-.helloTitle {
-  font-size: 65px;
-  font-weight: 700;
-  animation: slide-up 4s 2s forwards;
+} */
+
+.wrapper {
+  height: 80vh;
+  overflow: hidden;
 }
 
-
-        @keyframes slide-up {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes slideInFromRight {
-            0% {
-                transform: translateX(100%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-.text {
-    text-align: left;
-    font-size: 20px;
-    font-weight: 400;
-    color: #ffffff;
-     opacity: 0;
-    transform: translateY(100px);
-    animation: slideInFromRight 2s 1s forwards;
-    /* animation: slide-up 3s 1s forwards; */
-     background-color: rgba(0, 0, 0, 0.729);
-    padding: 10px 20px;
-  border-radius: 20px;
-    }
-
-.title {
-    text-align: center;
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 50px;
-    color: #ffffff;
-    opacity: 0;
-    transform: translateY(100px);
-    animation: slide-up 1s 1s forwards;
-    background-color: rgba(0, 0, 0, 0.729);
-    padding: 10px 20px;
-  border-radius: 20px;
-}
-.skillList {
+.section {
   display: flex;
-  gap: 70px;
-margin: 30px 0px;
-}
-.item {
-  border: 1px solid rgba(240, 237, 237, 0.1);
-  padding: 20px 30px;
-  border-radius: 20px;
-background: linear-gradient(90deg, #000000, #202020, #000000);
-  color: inherit;
-  font-size: 25px;
-  font-weight: 600;
-  text-align: center;
-  display: inline-block;
-  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
-
-display: flex;
-align-items: center;
-flex-direction: column;
-gap: 20px;
-}
-
-.icon {
-  width: 50px;
-  height: 50px;
-}
-
-.photo {
-  width: 250px;
-  height: auto;
-  box-shadow: 
-    0 0 5px rgba(240, 237, 237, 0.1),
-    0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
-    border-radius: 50%;
-    position: sticky;
-    z-index: 12;
-    animation: grow 2s ease-in-out forwards;
-}
-
-@keyframes grow {
-  from {
-    width: 0;
-    opacity: 0; 
-  }
-  to {
-    width: 350px; 
-    opacity: 1;
-  }
-}
-
-
-
-.docBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 150px;
-    padding: 30px;
-    margin-bottom: 50px;
-    width: auto;
-}
-.education {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-    list-style: none;
-}
-
-@keyframes slideInFromLeft {
-            0% {
-                transform: translateX(-100%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-.cv {
-   width: 300px;
-    height: auto;
-    border-radius: 20px;
-    cursor: pointer;
-    animation: slideInFromLeft 2s ease-in-out forwards;
-}
-
-.cvRight {
-   width: 300px;
-    height: auto;
-    border-radius: 20px;
-    cursor: pointer;
-    animation: slideInFromRight 2s ease-in-out forwards;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
 }
 
 
