--- a/src/components/AboutMeContent/Intro/Intro.module.css
+++ b/src/components/AboutMeContent/Intro/Intro.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     justify-content: center;
     gap: 100px;
+    padding: 0px 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
 }
 .helloDiv {
@@ -13,7 +15,6 @@
     justify-content: center;
     flex-direction: column;
     gap: 30px;
-    margin-bottom: 50px;
 }
 
   @keyframes slide-up {
