--- a/src/pages/AboutAndProjects/AboutAndProjects.module.css
+++ b/src/pages/AboutAndProjects/AboutAndProjects.module.css
@@ -1,11 +1,11 @@
 
 /* .wrapper {
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
 .section {
-  height: auto; 
+  height: 100%; 
   display: flex;
   justify-content: center;
   align-items: center;
