update and cleaning

--- a/src/components/AboutMeContent/Tools/Tools.module.css
+++ b/src/components/AboutMeContent/Tools/Tools.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.729);
   padding: 50px 0px;
+  margin-bottom: 100px;
 }
 
   @keyframes slide-up {
