--- a/src/pages/AboutAndProjects/AboutAndProjects.module.css
+++ b/src/pages/AboutAndProjects/AboutAndProjects.module.css
@@ -1,14 +1,23 @@
 
-/* .wrapper {
+.wrapper {
   height: 100vh;
-  overflow: hidden;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+.wrapper::-webkit-scrollbar {
+  display: none; /* Chrome/Safari */
 }
 
 .section {
-  height: 100%; 
+  height: 100vh;
+  scroll-snap-align: start;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  box-sizing: border-box;
-} */
+}
+
