--- a/src/components/AboutMeContent/Intro/Intro.module.css
+++ b/src/components/AboutMeContent/Intro/Intro.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     gap: 100px;
     padding: 0px 50px;
-    margin-bottom: 100px;
+    margin: 100px 0px;
 }
 .helloDiv {
     display: flex;
