--- a/src/components/AboutMeContent/Docs/Docs.module.css
+++ b/src/components/AboutMeContent/Docs/Docs.module.css
@@ -1,41 +1,17 @@
 
-@keyframes slideInFromRight {
-            0% {
-                transform: translateX(100%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
 
-@keyframes slideInFromLeft {
-            0% {
-                transform: translateX(-100%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
+
+
 
 .docBox {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 150px;
-    padding: 30px;
-   margin: 100px 0px;
-    width: auto;
+    padding: 150px 0px;
+    margin: 100px 0px;
 }
- @keyframes slide-up {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
+ 
 .repoLinkIcon {
  width: 30px;
   height: 30px;
@@ -55,9 +31,6 @@
     font-size: 40px;
     font-weight: 600;
     color: #ffffff;
-    opacity: 0;
-    transform: translateY(100px);
-    animation: slide-up 1s 1s forwards;
     background-color: rgba(0, 0, 0, 0.729);
     padding: 10px 20px;
   border-radius: 20px;
@@ -65,6 +38,9 @@
    text-decoration: underline;
     width: auto;
     white-space: nowrap;
+    text-shadow: 0px 0px 10px #00baff,
+    0px 0px 20px #00baff;
+    transition: all 0.3s ease-in-out;
 }
 .education {
     display: flex;
@@ -77,12 +53,10 @@
    width: 300px;
     height: auto;
     border-radius: 20px;
-    animation: slideInFromLeft 2s ease-in-out forwards;
 }
 
 .cvRight {
    width: 300px;
     height: auto;
     border-radius: 20px;
-    animation: slideInFromRight 2s ease-in-out forwards;
 }
