--- a/src/components/AboutMeContent/Intro/Intro.module.css
+++ b/src/components/AboutMeContent/Intro/Intro.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     gap: 100px;
-    padding: 0px 50px;
+    padding: 250px 50px 100px 50px;
     margin: 100px 0px;
 }
 .helloDiv {
