--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,18 +1,26 @@
+.headerWrapper {
 
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  background: transparent; 
+  display: flex;
+  justify-content: center;
+  pointer-events: none;
+}
 
 .header {
-    align-items: center;
-   justify-content: space-between;
-    display: flex;
-    padding: 50px 20px 20px 20px;
-    max-width: 1440px;
-  position: sticky;
-    top: 0;
-    z-index: 100;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.858);
-    margin: 0 auto;
-     border-radius: 20px;
+    pointer-events: auto;
+  width: 100%;
+  max-width: 1280px;
+  padding: 50px 50px 20px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.858);
+  border-radius: 20px;
 }
 
 
