--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -3,11 +3,12 @@
 
 .wrapper {
     height: auto;
-    padding: 50px 50px 250px 50px;
+    padding: 150px 0px 250px 0px;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
+ margin: 100px 0px ;
 }
 
 @keyframes gradient {
