--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -1,6 +1,9 @@
 
 
 
+
+
+
 .wrapper {
     height: auto;
     padding: 150px 0px 250px 0px;
@@ -31,8 +34,53 @@ font-size: 55px;
 }
 
 
+.carousel {
+    width: 1040px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
-.list {
+.paper {
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    margin-bottom: 50px;
+
+}
+
+
+
+.button {
+    background-color: #ab230b;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+
+
+
+
+
+
+
+
+
+/* .list {
     display: flex;
     gap: 30px;
     margin: 0px auto;
@@ -166,6 +214,6 @@ justify-content: center;
 .item:hover .icon, .item:focus .icon {
   stroke-dashoffset: 0;
   stroke: #ab230b; 
-}
+} */
 
 
