--- a/src/components/SharedLayout/Header/Header.module.css
+++ b/src/components/SharedLayout/Header/Header.module.css
@@ -1,26 +1,17 @@
-.headerWrapper {
-
-  position: fixed;
-  top: 50px;
-  left: 0;
-  width: 100%;
-  z-index: 999;
-  background: transparent; 
-  display: flex;
-  justify-content: center;
-  pointer-events: none;
-}
-
 .header {
-    pointer-events: auto;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100%;
-  max-width: 1280px;
+  max-width: 1340px;
+  z-index: 99;
   padding: 50px 50px 20px 50px;
+  background-color: rgba(0, 0, 0, 0.858);
+  border-radius: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.858);
-  border-radius: 20px;
 }
 
 
