--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -5,8 +5,9 @@
 
 
 .wrapper {
+    background-color: black;
     height: auto;
-    padding: 150px 0px;
+    padding: 0px 0px 50px 0px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -35,52 +36,59 @@ font-size: 55px;
 
 
 .carousel {
-    width: 1040px;
-    height: 470px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+    width: 1200px;
+    height: 690px;
 }
+
 .imgWrapper {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 30px;
+    background-color: black;
+    padding: 20px 0px;
 }
 
 .img {
-    width: 326px;
-    height: 194px;
+    width: 576px;
     object-fit: cover;
+    
 }
+
 .infoWrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
+   align-items: center;
     justify-content: center;
+    display: flex;
+    gap: 30px;
     flex-direction: column;
-    gap: 10px;
 }
 .paper {
-    width: 1000px;
-    height: 430px;
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    height: 540px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    padding: 20px;
+   gap: 50px;
+    padding: 0px 70px 50px 70px;
     margin-bottom: 50px;
-
 }
 
-
+.infoTitle {
+    font-size: 35px;
+    font-weight: 700;
+    color: #ab230b;
+    margin-bottom: 20px;
+}
+.linksWrapper {
+    display: flex;
+    gap: 30px;
+}
+.links {
+    color: #fff;
+    font-size: 18px;
+}
 
 .button {
     background-color: #ab230b;
