--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -47,6 +47,8 @@ font-size: 55px;
     gap: 10px;
     background-color: rgb(15, 6, 26);
     padding: 20px 0px;
+    justify-content: center;
+    align-items: center;
 }
 .rowDirection {
     flex-direction: row;
@@ -74,8 +76,22 @@ font-size: 55px;
     display: flex;
     gap: 30px;
     flex-direction: column;
-    background-color: burlywood;
+    background-color: rgb(15, 6, 26);
     padding: 20px;
+    width: 258px;
+}
+.button {
+    padding: 16px 32px !important;
+  display: flex; 
+  color: #ffffff !important;
+  cursor: pointer;
+font-weight: 400;
+border-radius: 20px !important;
+border: 1px solid rgba(240, 237, 237, 0.1) !important;
+  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
 }
 .paper {
     height: 590px;
@@ -90,31 +106,33 @@ font-size: 55px;
 .infoTitle {
     font-size: 35px;
     font-weight: 700;
-    color: #ab230b;
+    color: white;
     margin-bottom: 20px;
 }
 .linksWrapper {
     display: flex;
     gap: 30px;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 .links {
-    color: #fff;
-    font-size: 18px;
-}
-
-.button {
-    background-color: #ab230b;
     color: white;
-    padding: 10px 20px;
-    border-radius: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    font-size: 22px;
+    white-space: nowrap;
+  text-decoration: underline;
+text-decoration-skip-ink: none;
 }
 
 
+
+.backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 
 
