--- a/src/components/AboutContent/Intro/Intro.module.css
+++ b/src/components/AboutContent/Intro/Intro.module.css
@@ -26,6 +26,10 @@
 .helloTitle {
   font-size: 65px;
   font-weight: 700;
+  background: linear-gradient(84deg, #8e44ad, #3498db, #00ffff);
+    background-size: 200% 200%;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   animation: slide-up 4s 2s forwards;
 }
 
