--- a/src/components/AboutContent/Tools/Tools.module.css
+++ b/src/components/AboutContent/Tools/Tools.module.css
@@ -34,19 +34,18 @@
 margin: 30px 0px;
 }
 .item {
-  border: 1px solid rgba(240, 237, 237, 0.1);
   padding: 20px 30px;
   border-radius: 20px;
-background: linear-gradient(90deg, #000000, #202020, #000000);
+background: linear-gradient(135deg, #36051f, #000d4f, #020515);
   color: inherit;
   font-size: 25px;
   font-weight: 600;
   text-align: center;
   display: inline-block;
-  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
+  border: 1px solid rgba(153, 69, 232, 0.325);
+    box-shadow: 0 0 30px rgba(255, 255, 255, 0.05), 
+    0 0 60px rgba(152, 69, 232, 0.1),
+    0 0 80px rgba(152, 69, 232, 0.1);
 
 display: flex;
 align-items: center;
