--- a/src/components/SharedLayout/Header/Header.module.css
+++ b/src/components/SharedLayout/Header/Header.module.css
@@ -14,46 +14,40 @@
   align-items: center;
 }
 
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
 .headerItem {
    padding: 16px;
-  display: flex; 
-  color: #ffffff;
+  display: flex;
   align-items: flex-end;
   justify-content: flex-end;
   cursor: pointer;
-    font-size: 18px;
-font-weight: 400;
-position: relative;
-}
-.headerItem::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 3px; 
-  width: 100%;
-  height: 2px; 
-  background-color: #ffffff;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-  transform-origin: left;
+    font-size: 28px;
+font-weight: 600;
+background: linear-gradient(84deg, #9b59b6, #8e44ad, #3498db, #00ffff);
+    background-size: 200% 200%;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradient 4s ease infinite;
 }
 
-
-.headerItem.active::after, .headerItem:hover::after {
-  transform: scaleX(1);
-}
 
 
   
 .headerList {
-border: 1px solid rgba(240, 237, 237, 0.1);
     display: flex;
     justify-content: flex-end;
     gap: 70px;
     border-radius: 20px;
     padding: 10px 20px;
-   background: linear-gradient(90deg, #000000, #202020, #000000);
-  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
+   /* background: linear-gradient(135deg, #36051f, #000d4f, #020515); */
+   border: 1px solid rgba(153, 69, 232, 0.325);
+   box-shadow: 0 0 30px rgba(255, 255, 255, 0.05), 
+   0 0 60px rgba(152, 69, 232, 0.1),
+   0 0 80px rgba(152, 69, 232, 0.1);
 }
 
