--- a/src/components/AboutContent/Docs/Docs.module.css
+++ b/src/components/AboutContent/Docs/Docs.module.css
@@ -13,8 +13,8 @@
 }
  
 .repoLinkIcon {
- width: 30px;
-  height: 30px;
+ width: 50px;
+  height: 50px;
   fill: #ffffff;
   stroke: #00baff;
 }
@@ -27,6 +27,10 @@
      
   }
 .link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
     text-align: center;
     font-size: 40px;
     font-weight: 600;
