--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -90,10 +90,14 @@
 }
 .button {
     padding: 16px 32px !important;
-  display: flex; 
+    display: flex;
+    align-items: center ;
+    justify-content: center ;
+    gap: 20px; 
+    text-align: center;
+    font-weight: 700 !important;
   color: #ffffff !important;
   cursor: pointer;
-font-weight: 600;
 border-radius: 20px !important;
 border: 1px solid #ffffff !important;
   box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
@@ -113,7 +117,12 @@ border: 1px solid #ffffff !important;
     transition: all 0.3s ease;
   }
 
-
+  .showMoreIcon {
+    width: 10px;
+    height: 10px;
+    fill: #ffffff;
+    stroke: #00baff;
+  }
 
 
 .paper {
@@ -140,14 +149,21 @@ border: 1px solid #ffffff !important;
     margin-bottom: 20px;
 }
 .links {
-    position: relative;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  cursor: pointer;
+  text-decoration: underline;
+   width: auto;
+   white-space: nowrap;
     color: white;
     font-size: 22px;
-    text-decoration: none;
-    transition: all 0.3s ease;
+    /* text-decoration: none;
+    transition: all 0.3s ease; */
   }
   
-  .links::after {
+  /* .links::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -155,13 +171,18 @@ border: 1px solid #ffffff !important;
     left: 0;
     bottom: -4px;
     background-color: white;
-  }
+  } */
   
   .links:hover,
   .links:focus {
     animation: left-edge 0.5s linear 1;
   }
-
+  .repoLinkIcon {
+    width: 30px;
+     height: 30px;
+     fill: #ffffff;
+     stroke: #00baff;
+   }
  
 @keyframes left-edge {
 	0% {
