--- a/src/components/AboutContent/Docs/Docs.module.css
+++ b/src/components/AboutContent/Docs/Docs.module.css
@@ -4,14 +4,42 @@
 
 
 .docBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 150px;
-    padding: 150px 0px;
-    margin: 100px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 250px;
+  padding: 150px 0px;
+  margin: 100px 0px;
+  position: relative;
 }
- 
+
+.education {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+    background: #191919aa;
+    background: linear-gradient(
+        180deg,
+        #292929aa 0%,
+        #191919cc 50%
+    );
+    /* backdrop-filter: blur(4px); */
+    box-shadow: inset 0 2px 2px 0 #e7c4a088,
+    inset 0 -2px 2px 0 #0003;
+    
+    color: #ccc;
+  border-radius: 20px;
+  gap: 50px;
+  width: 330px;
+  position: relative; /* додали для абсолютного позиціонування світла */
+}
+
+.education:hover {
+  background-color: rgba(43, 39, 39, 0.9);
+}
+
 .repoLinkIcon {
  width: 50px;
   height: 50px;
@@ -26,31 +54,34 @@
     text-align: center;
      
   }
-.link {
+
+  .link {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 600;
     color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.729);
-    padding: 10px 20px;
-  border-radius: 20px;
   cursor: pointer;
-   text-decoration: underline;
-    width: auto;
-    white-space: nowrap;
-}
-.education {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-.cv {
+  padding: 10px 20px;
+    border-radius: 20px;
+   background: #fff2;
+        box-shadow: 
+        0 0 0 1px #fff3, 
+        inset 120px 0 100px -100px #000c, 
+        0 0 0 0 #fff1;
+
+        transition: box-shadow 0.4s ease-in-out;
+        &:hover {
+            box-shadow: 
+            0 0 0 1px #fff3, 
+            inset 200px 0px 100px -100px #000a, 
+            -4px 0 8px 2px #fff2;
+        }
+  }
+   
+
+   .cv {
    width: 300px;
     height: auto;
     border-radius: 20px;
@@ -60,4 +91,115 @@
    width: 300px;
     height: auto;
     border-radius: 20px;
+}
+
+
+
+.accents {
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  top: -10%;
+  left: 0px;
+  right: 0;
+  z-index: -1;
+}
+
+.accCard {
+  width: 430px;
+  height: 700px;
+  background: #eee1;
+  opacity: 0.8;
+  position: absolute;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 16px;
+  box-shadow: inset 0 2px 2px 0 #e0c9b266,
+    inset 0 -2px 2px 0 #0004;
+  backdrop-filter: blur(4px);
+  transform-origin: 20% 80%;
+  animation: wobble 18s ease-in-out infinite;
+}
+.accCard:nth-child(2) {
+  animation: wobble 22s ease-in-out -6s infinite reverse;
+}
+.accCard:nth-child(3) {
+  animation: wobble 26s ease-in-out -18s infinite;
+}
+
+
+.lightTopRight {
+  position: absolute;
+  right: -100px;
+  top: 150px;
+  width: 150px;
+  height: 150px;
+  z-index: -2;
+  animation: rotate360 18s linear infinite;
+}
+
+.lightBottomLeft {
+  position: absolute;
+  left: -100px;
+  bottom: 100px;
+  width: 250px;
+  height: 250px;
+  z-index: -2;
+  animation: rotate360 18s linear -10s infinite;
+}
+
+.lightSvg {
+  width: 100%;
+  height: 100%;
+  filter: blur(1px);
+}
+
+/* .lightSvg path {
+  fill: #fffef9;
+  stroke: #ffc78e;
+  stroke-width: 2px;
+} */
+
+/* .topLight {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -42px;
+  margin: auto;
+  width: 284px;
+  height: 6px;
+  border-radius: 10px;
+  background: #fffef9;
+  box-shadow:
+    0 0px 1px 1px #ffc78e,
+    0 1px 2px 1px #ff942977,
+    0 2px 6px 1px #e98b2d77,
+    0 4px 12px 0px #ff9e3d99,
+    0 12px 20px 12px #ff800044;
+} */
+
+@keyframes rotate360 {
+  to {
+    rotate: 360deg;
+  }
+}
+
+@keyframes wobble {
+  0% {
+    transform: translateX(10px) translateY(20px) rotate(-3deg) scale(1);
+  }
+  20% {
+    transform: translateX(-44px) translateY(-8px) rotate(6deg) scale(1.02);
+  }
+  60% {
+    transform: translateX(32px) translateY(18px) rotate(-8deg) scale(1);
+  }
+  80% {
+    transform: translateX(-42px) translateY(-22px) rotate(12deg) scale(0.94);
+  }
+  100% {
+    transform: translateX(10px) translateY(20px) rotate(-3deg) scale(1);
+  }
 }
