--- a/src/components/AboutContent/Docs/Docs.module.css
+++ b/src/components/AboutContent/Docs/Docs.module.css
@@ -33,7 +33,7 @@
   border-radius: 20px;
   gap: 50px;
   width: 330px;
-  position: relative; /* додали для абсолютного позиціонування світла */
+  position: relative;
 }
 
 .education:hover {
@@ -155,30 +155,6 @@
   height: 100%;
   filter: blur(1px);
 }
-
-/* .lightSvg path {
-  fill: #fffef9;
-  stroke: #ffc78e;
-  stroke-width: 2px;
-} */
-
-/* .topLight {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: -42px;
-  margin: auto;
-  width: 284px;
-  height: 6px;
-  border-radius: 10px;
-  background: #fffef9;
-  box-shadow:
-    0 0px 1px 1px #ffc78e,
-    0 1px 2px 1px #ff942977,
-    0 2px 6px 1px #e98b2d77,
-    0 4px 12px 0px #ff9e3d99,
-    0 12px 20px 12px #ff800044;
-} */
 
 @keyframes rotate360 {
   to {
