--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ html, body {
 
 
 body {
-  font-family: 'Josefin Sans Variable', sans-serif;
+  font-family: 'Courier New', monospace;
   background: black;
   color: white;
 }
