Refactor ProjectsSection code structure for improved readability and maintainability

--- a/src/components/Projects/AnimatedGallery/AnimatedGallery.module.css
+++ b/src/components/Projects/AnimatedGallery/AnimatedGallery.module.css
@@ -1,16 +1,11 @@
 
 .sliderWrapper {
     
-    width: 250px;
-    height: auto;
     overflow: hidden;
 }
 
 .image {
-   width: 250px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+  will-change: opacity, filter;
   
 }
